# Tesi

./: .gitignore  README.md  pyproject.toml
src/: utils.py
src/models/plane/: working_plane.py
src/models/pocket/: pocket.py
src/models/robot/: robot.py
src/models/shape/: circle.py  closed_spline.py  generic_polygon.py  generic_shape.py  parametric_shape.py  rectangle.py  shape.py
src/models/shape/showcases/: showcases_shape.ipynb  showcases_spline.ipynb  test_velocità_del_robot.ipynb
src/models/shape/test/: test_shape.py
src/pygarp/: __main__.py  __version__.py
src/pygarp/cli/: main.py  wizard.py  wizards.py
src/pygarp/core/models/: commons.py  dtypes.py  utils.py  validators.py
src/pygarp/core/models/shapes/: circle.py  closed_spline.py  parametric_interface.py  rectangle.py  regular_polygon.py
src/pygarp/core/models/shapes/shape/: core.py  discretization_mixin.py  transformation_mixin.py
src/pygarp/core/models/virtual_space/: core.py
src/pygarp/core/orchestrators/: main.py  shape.py  space.py
src/pygarp/core/workers/: pocket_infill.py  pocket_outline.py  writer.py
tests/files/: cpoints_01  test_01.csv
tests/output/: esagono.csv  esagono1_con.csv  esagono_com_4.csv  esagono_con.csv  esagono_con_3.csv  esagono_con_4.csv  esagono_con_4x3.csv
