[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PyGarp"
version = "0.1.0"
description = "Python adaptive geometric pocket"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "4f-6e-69", email = "radangelo23@gmail.com" }
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "numpy>=2.4.2",
    "shapely>=2.1.2",
    "scipy>=1.17.1",
    "pyvista>=0.47.1",
    "matplotlib>=3.10.8",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0"
]

[project.scripts]
pygarp = "pygarp.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0"
]